# slam_in_autonomous_driving

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  readme.md
cmake/: FindCSparse.cmake  FindCholmod.cmake  FindGlog.cmake  FindPANGO.cmake  packages.cmake
config/: avia.yaml  mapping.yaml  velodyne.yaml  velodyne_nclt.yaml  velodyne_ulhk.yaml  velodyne_utbm.yaml  velodyne_wxb.yaml
data/: log_lio_iekf_nclt.txt
data/ch3/: dr.txt
data/ch4/: gins.txt
data/ch5/: first.pcd  scan_example.pcd  second.pcd
data/ch7/EPFL/: aquarius_pose.txt  aquarius_source.pcd  kneeling_lady_source.pcd
data/ch8/: after_undist.pcd  before_undist.pcd
docker/: docker_run.sh  sources.list
scripts/: all_path.py  plot_ch3_gnss_2d.py  plot_ch3_gnss_3d.py  plot_ch3_state.py  plot_ch4_path.py  plot_ch5_results.py  plot_ch7_align_results.py
src/: CMakeLists.txt
src/ch10/: CMakeLists.txt  fusion.cc  fusion.h  run_fusion_offline.cc
src/ch2/: CMakeLists.txt  motion.cc
src/ch3/: CMakeLists.txt  eskf.hpp  imu_integration.h  process_gnss.cc  run_eskf_gins.cc  run_imu_integration.cc  static_imu_init.cc  static_imu_init.h  utm_convert.cc  utm_convert.h
src/ch4/: CMakeLists.txt  g2o_types.cc  g2o_types.h  gins_pre_integ.cc  gins_pre_integ.h  imu_preintegration.cc  imu_preintegration.h  run_gins_pre_integ.cc  test_preintegration.cc
src/ch5/: CMakeLists.txt  bfnn.cc  bfnn.h  gridnn.hpp  kdtree.cc  kdtree.h  linear_fitting.cc  octo_tree.cc  octo_tree.h  pcd_to_brid_eye.cc  point_cloud_load_and_vis.cc  scan_to_range_image.cc  test_nn.cc
src/ch6/: CMakeLists.txt  frame.cc  frame.h  g2o_types.h  icp_2d.cc  icp_2d.h  lidar_2d_utils.cc  lidar_2d_utils.h  likelihood_field.cc  likelihood_filed.h  loop_closing.cc  loop_closing.h  mapping_2d.cc  mapping_2d.h  multi_resolution_likelihood_field.cc  multi_resolution_likelihood_field.h  occupancy_map.cc  occupancy_map.h  submap.cc  submap.h  test_2d_icp_likelihood.cc  test_2d_icp_s2s.cc  test_2d_mapping.cc  test_2dlidar_io.cc  test_mr_matching.cc  test_occupancy_grid.cc
src/ch7/: CMakeLists.txt  direct_ndt_lo.cc  direct_ndt_lo.h  gen_simu_data.cc  gen_simu_data.h  icp_3d.cc  icp_3d.h  incremental_ndt_lo.cc  incremental_ndt_lo.h  ndt_3d.cc  ndt_3d.h  ndt_inc.cc  ndt_inc.h  notes.md
src/ch7/loam-like/: feature_extraction.cc  feature_extraction.h  loam_like_odom.cc  loam_like_odom.h
src/ch7/loosely_coupled_lio/: cloud_convert.cc  cloud_convert.h  loosely_lio.cc  loosely_lio.h  measure_sync.cc  measure_sync.h
src/ch7/test/: run_gen_simu_data.cc  test_feature_extraction.cc  test_icp.cc  test_inc_ndt_lo.cc  test_loam_odom.cc  test_loosely_lio.cc  test_ndt_lo.cc
src/ch8/: CMakeLists.txt
src/ch8/lio-iekf/: iekf.hpp  lio_iekf.cc  lio_iekf.h
src/ch8/lio-preinteg/: lio_preinteg.cc  lio_preinteg.h
src/ch8/test/: test_lio_iekf.cc  test_lio_preinteg.cc
src/ch9/: CMakeLists.txt  dump_map.cc  frontend.cc  frontend.h  keyframe.cc  keyframe.h  loopclosure.cc  loopclosure.h  optimization.cc  optimization.h  run_frontend.cc  run_loopclosure.cc  run_mapping.cc  run_optimization.cc  split_map.cc
src/common/: CMakeLists.txt  dataset_type.h  eigen_types.h  g2o_types.cc  g2o_types.h  global_flags.cc  global_flags.h  gnss.h  imu.h  io_utils.cc  io_utils.h  lidar_utils.h  math_utils.h  message_def.h  nav_state.h  odom.h  point_cloud_utils.cc  point_cloud_utils.h  point_types.h  sys_utils.h
src/common/msg/: CMakeLists.txt
src/common/msg/monitor_msgs/: CMakeLists.txt  package.xml
src/common/msg/monitor_msgs/msg/: fault_info.msg  fault_vec.msg
src/common/msg/velodyne_msgs/: CMakeLists.txt  package.xml
src/common/msg/velodyne_msgs/msg/: VelodyneScan.msg  VelodyneScanRaw.msg
src/common/timer/: timer.cc  timer.h
src/tools/: CMakeLists.txt  pcl_map_viewer.h
src/tools/pointcloud_convert/: hesai_pc_convertor.cc  hesai_pc_convertor.h  packets_parser.cc  packets_parser.h  suteng_irad_M1_pc_convertor.cc  suteng_irad_M1_pc_convertor.h  suteng_irad_pc_convertor.cc  suteng_irad_pc_convertor.h  suteng_pc_convertor.cc  suteng_pc_convertor.h  velodyne_config.h  velodyne_convertor.cc  velodyne_convertor.h
src/tools/ui/: pangolin_window.cc  pangolin_window.h  pangolin_window_impl.cc  pangolin_window_impl.h  ui_car.cc  ui_car.h  ui_cloud.cc  ui_cloud.h  ui_frame.h  ui_image.h  ui_stamped_pose.h  ui_test.cc  ui_trajectory.cc  ui_trajectory.h
src/triangulate_points/: CMakeLists.txt  fisheye_pix_2_cam_test.cc  odo.cc  triangulate_points.cc
